# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xKE7rAZTUJlutNcneMU1EZGc_Q-z73NC7HGx3XFlvgg4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1Jem1Q1_8LtF8heT1BXsip84y2h_xWfvG7XF1Lx7hIUM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1Lryud1yPYy41r2YaidVtSeASWzgULRFoyidGotrb86s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16x7jlStdNaHw1Fx2gpqtmslXhlFP6L-2DNJ25qUyuUfD0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1o4n7g3jQ-NoWDLacepdyZzUN9xInaVj0u70yTpomwHs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x191Wez-XeisZjXyPzfRidFENavvx49fCJDFdpcWTWb24=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1_SWNGmYurzYOxyxISOyV2mZDTU6UeNYWctFSn8VZ6Iw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT23i3oKqSI1RoDkuR_NvXt_iD6hXC00zAn4qH4c41D9e0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2AyzP60moB_DNwVrLPhVLyFQu8pDiGW5IlBo5EvhAah4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2h6gJmzi-J1NM6_ZLZSafPvUqjY3Oq5LBMQSq5wYn8ks=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2ovBdus3VkJYIyDn4hIVAZ0dSlxFvcqvR8-Umw1HewFI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2q8NvWkQDHDeCwuq1aZC7uAN9P0tueMQLmVP3WuqL_FY=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1K-aaGzpQS9CrQDa8Mf-KK6Vnml5DIh8MMYh1oY69O7Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1gJlklpUI4yXLIjOQ4OTwdPguonj965PiV3tIgLbk4p0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1gdbFWtj3juSlik7BistqXsfHmwTIl9GsPktKsdnL2cA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1wSsORGqOkrsyKuy7OBTEgSwGM4cWXfmnfvFwHgMyNtQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1x_eUe3EgB3Tn6QYHpWrY66CmhNhgdS8tO4uxKxO_GVw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1yK3HUlqHYdLRAH1howb5F95ZHmKOwmTYott-TXyxUYQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x10TZg6bIVayzI8rpqtz9I_lKV0y9hGEdY4EX5tLl7U_s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64owsTqy6C9IHZZpEnmVlMi9zV1TrwxvBT4eSmLClJbZ0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64qPBJiwMpDDf610AbSC4C1aa9sP2x_TzTY0a3pd5S53w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1YrYQ--0CogP7P54wmFRaSkhyJ6akRR2ebF0JmOubjko=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1dvmMUZQCb6_iwOK8hkTR0oWS-qQiXGghvcV9aK6GBlc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1nNg-Ae4nxgcvHyCI3aZf2srN-xQzsW6V5K7_nVNcC90=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_66DAyT0x00AwkFCGKuH90tNbSltD0Ji9IwDV35weuIg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_YrjdjcXe-RLTlS4GWE55MTRVhDOzfGewsezcqv4ofDI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_ohj4YgnzHq2NWGRIkhFUaUFsi8LFrBl4EHXVYaww254=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI329tmXVMfAUA7i-5gTUHtKHdAyHTMyQX9hrqzSsCgGAPU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32kXXHsJMXJULK7JpGWwKBUHhzJM3FrmBAwahM1Q4yEvg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32wQOtB43Nnn69X7NVb4YTTshK73ZXSspzd_daeGZCrAU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32F-72scIs9GuBeQ75TKt-_U7k7cYMxrVGk76YLl1Mkoo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xLsMkLnLII0OMU9KvKHUolLPecJeh1pDz8CcyZAquqS0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xYfbkjpRUK7Oow_kFYkuAaCYCKvKRUMt_7PV81wiMz7Y=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1338fpJrMAkN_2vsbAyOeRK2QzfdIVBW37G2qYi8evdE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1AtHqZ5yX0TU1UPNg8SI1fSw_bA-mROzO44U6y6QI0XM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1ELa6Lunlfm79_rWa-XIg0H8Cf_Vp46keRkxKbvJe4hI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1Ez590vHq9vEGMtMkj5yn_amsuihMhG-8Q1xkIh4whXE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1d_qeEGVEgKdpm5lOurLKOm1SAACuyzxZXX-ftKaVziA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1n3sMD5cOYn6GpP45qixCh3l3Ieb5q-s4tK6qmI6z1Eg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT12pN4vrwG4D3aZfWbmI74ww7vqk2dZheAD1Omxeuu0xM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1zg0fck7B4Xwm33kOx8mWES0Cxhm8L8pyDQEXxDTNdeM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT35dYFtrT6rDoPJKFxBw_YUj9JvhLgGUzqkC6pyPqUK04=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3AvfqlTTEyNU1Hy4BUijLT-gvLTCm5Yayy95-c1j8pSk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4Y3a2X36VybZpg95Gr9uLKM1zcCFNpexvzf0o3YxVqr4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4jchW0cwB4xOqKSzaYNPYrtLvonijf6aY8utyiUAVaJc=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16hdZLCP0IU8MkA5B88nHgz5sezrHXIMhMA-mtKbMBjTg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16LdcXwduJP6K93Q66F5UtcQDTDo-fyjqpTE5gRRU2P0U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16lmovFpU9EjxDRFd6l9Qxc451DYb2jugu-L02C6e5vsk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16srOZv_7tAIMP7Odz9IW8l28kd3vSALr7_rLYrKn87_8=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x1644EfYAKEaUtj_mdDZXRUWyTKE6-GeSIgyTbzs4hf-9w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x161t1q6fLUjstmX---NuEUqV6nwYC_dDc-onnHH4sAOSo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16Z1MKkr10Jr4ugDrZZA4jj9x4kt6al8dQsHjy8YI6_DU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16ZvGFgZth0s-utxCQ3oDcyUNog67Gn_4NMIXVn0r089I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16umg3SBJFWxVpYjmZiVuK-pZ3QaaspAdQ1du9g-PWSXs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16jjezjbliYLZpBb2Np4HsECJGYjVbXJ69f5vtdI09I-M=',
      'err': 0,
    }),
  ])
# ---
